--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="https://cutefish-ubuntu.github.io/">Home</a>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
+      <!--  <a href="{{ site.baseurl }}/blog">Blog</a> -->
             <a href="{{ site.baseurl }}/download">Download</a>
             <a href="{{ site.baseurl }}/donate">Donate</a>
             <a href="{{ site.baseurl }}/about">About</a>
