--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <p style="text-align: center;">&copy; 2021 Maksym Titenko</p>
+            <p style="text-align: center;">&copy; 2021 - 2022 Maksym Titenko</p>
             <p style="text-align: center;">Ubuntu is a Trademark of Canonical Ltd. CutefishOS is a Trademark of CutefishOS Team.</p>
         </div>
     </footer>
