--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,23 +9,23 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="https://cutefish-ubuntu.github.io/style.css" />
+    <link rel="stylesheet" type="text/css" href="https://cutefish-ubuntu.github.io/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3075431923852009"
      crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PXWBYKLNGL"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PXWBYKLNGL');
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PXWBYKLNGL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-PXWBYKLNGL');
-</script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -107,9 +107,10 @@
             <p style="text-align: center;">&copy; 2021 - 2022 Maksym Titenko</p>
             <p style="text-align: center;">Ubuntu is a Trademark of Canonical Ltd. CutefishOS is a Trademark of CutefishOS Team.</p>
         </div>
+        </div>
     </footer>
-    </div>
-
+    
+    
     {% include analytics.html %}
    
   </body>
