--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
                 <div class="col-sm-3">
                     <h5>Friends:</h5>
                     <ul>
-                        <li><a href="https://jingos.com/">JingOS</a></li>
+                       <!-- <li><a href="https://jingos.com/">JingOS</a></li> -->
                         <li><a href="https://mpr.hunterwittenborn.com/">MPR</a></li>
                         <li><a href="https://github.com/makedeb">Makedeb</a></li>
                     </ul>
@@ -74,7 +74,7 @@
                     <ul>
                         <li><a href="https://t.me/cutefishos_ubuntu">Telegram Group</a></li>
                         <li><a href="https://t.me/cutefishos_ubuntu_chat">Telegram Chat</a></li>
-                        <li><a href="https://discord.gg/tRXpm4JP">Discord</a></li>
+                       <!-- <li><a href="https://discord.gg/tRXpm4JP">Discord</a></li> -->
                         <li><a href="https://github.com/cutefishos-ubuntu">GitHub</a></li>
                     </ul>
                 </div>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
             </div>
-            <p style="text-align: center;">&copy; 2021 - 2022 Maksym Titenko</p>
+            <p style="text-align: center;">&copy; 2021 - 2024 Maksym Titenko</p>
             <p style="text-align: center;">Ubuntu is a Trademark of Canonical Ltd. CutefishOS is a Trademark of CutefishOS Team.</p>
         </div>
         </div>
